/events/meのエンドポイント作成
