# server/handler/events.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"database/sql"
+	"log"
 	"net/http"
 	"slices"
 
@@ -77,6 +78,78 @@ func (h *Handler) PostEvents(ctx echo.Context) error {
 	return ctx.JSON(http.StatusCreated, res)
 }
 
+// (GET /events/me)
+func (h *Handler) GetEventsMe(ctx echo.Context) error {
+	userID := ctx.Get(traQIDKey).(string)
+	// ホストとなっているイベントの取得
+	eventsByHost, err := h.repo.GetEventsByHost(userID)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusInternalServerError, err)
+	}
+
+	// 回答候補となっているイベントの取得
+	eventsByTarget, err := h.repo.GetEventsByTargetUser(userID)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusInternalServerError, err)
+	}
+
+	// ホストとなっていないイベントのみに限定
+	removedHostEvent := removeEventHostFromTarget(eventsByHost, eventsByTarget)
+
+	// 回答済みのイベントの取得
+	eventAnsweredStruct, err := h.repo.GetDateVotesByUser(userID)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusInternalServerError, err)
+	}
+	eventAnsweredMap := make(map[uuid.UUID]struct{})
+	for _, e := range eventAnsweredStruct {
+		eventAnsweredMap[e.EventID] = struct{}{}
+		log.Printf("eventAnsweredMap: %v", e.EventID)
+	}
+
+	res := make([]api.EventMeResponse, 0, len(eventsByHost)+len(removedHostEvent))
+	for _, event := range eventsByHost {
+		_, isAnswered := eventAnsweredMap[event.ID]
+		res = append(res, api.EventMeResponse{
+			Description: &event.Description,
+			EventId:     event.ID,
+			IsAnswered:  isAnswered,
+			IsConfirmed: event.IsConfirmed,
+			IsHost:      true,
+			Title:       event.Title,
+		})
+	}
+	for _, event := range removedHostEvent {
+		_, isAnswered := eventAnsweredMap[event.ID]
+		res = append(res, api.EventMeResponse{
+			Description: &event.Description,
+			EventId:     event.ID,
+			IsAnswered:  isAnswered,
+			IsConfirmed: event.IsConfirmed,
+			IsHost:      false,
+			Title:       event.Title,
+		})
+	}
+	return ctx.JSON(http.StatusOK, res)
+}
+
+func removeEventHostFromTarget(hostEvent, targetEvent []model.Event) []model.Event {
+	removedEvent := []model.Event{}
+	for i := 0; i < len(targetEvent); i++ {
+		check := false
+		for j := 0; j < len(hostEvent); j++ {
+			if hostEvent[i].ID == targetEvent[j].ID {
+				check = true
+				break
+			}
+		}
+		if !check {
+			removedEvent = append(removedEvent, targetEvent[i])
+		}
+	}
+	return removedEvent
+}
+
 // (GET /events/{eventID})
 func (h *Handler) GetEventsEventID(ctx echo.Context, eventID api.EventID) error {
 	event, err := h.repo.GetEventByEventID(eventID)
@@ -96,10 +169,10 @@ func (h *Handler) GetEventsEventID(ctx echo.Context, eventID api.EventID) error 
 		})
 	}
 	getEventsByEventIDResponse := api.GetEventResponse{
-		DateOptions: &dateOptionsResponse,
+		DateOptions: dateOptionsResponse,
 		Description: event.Description,
-		Id:          &event.ID,
-		IsConfirmed: &event.IsConfirmed,
+		Id:          event.ID,
+		IsConfirmed: event.IsConfirmed,
 		Title:       event.Title,
 	}
 	if event.Start.Valid && event.End.Valid {
